vrl-studio for newer jdks >= 11 (see changes in run scripts)